# esm2-contact-prediction

./: .gitignore  README.md  Report.md  Strategies.md  config.yaml  pyproject.toml
experiments/quick_test_model/: model.pth  training_history.npy
mlruns/329887396556374988/: meta.yaml
mlruns/329887396556374988/4988988931424d8c9dfcb42c3a54ec2b/: meta.yaml
mlruns/329887396556374988/tags/: project
mlruns/495135693186438558/: meta.yaml
mlruns/495135693186438558/ffd87f5081284f67a6ac5c9f620ae39a/: meta.yaml
mlruns/578492015405104462/: meta.yaml
mlruns/578492015405104462/4144e21794fe4272bc2d2cb2e2a096a9/: meta.yaml
notebooks/: 01_ground_truth_generation.ipynb  01_input_tensor_exploration.ipynb  02_homology_search.ipynb  02_results_analysis.ipynb  03_cnn_dataset_generation.ipynb  04_cnn_training.ipynb  05_results_analysis.ipynb  06_serving.ipynb
scripts/: 01_download_dataset.py  02_download_homology_databases.py  03_generate_cnn_dataset.py  04_generate_cnn_dataset.py  04_train_cnn.py  05_predict_from_pdb.py  05_train_cnn.py  06_run_complete_pipeline.py  07_predict_from_pdb.py  08_batch_predict.py  10_optimize_hyperparameters.py  analyze_mlflow.py  compute_esm2_embeddings.py  download_dataset.py  download_homology_databases.py  generate_cnn_dataset_from_pdb.py  run_complete_pipeline.py  serve_model.py
src/esm2_contact/: __init__.py  mlflow_utils.py
src/esm2_contact/analysis/: __init__.py  mlflow_analyzer.py  performance_analyzer.py
src/esm2_contact/dataset/: __init__.py  processing.py  utils.py
src/notebook_utils/: __init__.py  esm2_embeddings.py
(+179 files in other folders)
